removed notified dataset changed when longitude and latitude is added